# walkplay-eq

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json
crates/walkplay-dac-protocol/: CAPTURE.md  Cargo.toml  PROTOCOL.md
crates/walkplay-dac-protocol/src/: lib.rs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: gen-icon.cjs  icon.icns
src-tauri/src/: firmware.rs  hid.rs  lib.rs  main.rs
src/features/chrome/: TitleBar.tsx
src/features/connection/: ConnectionBar.tsx
src/features/curve/: ResponseCurve.tsx  dsp.ts  useResponseCurve.ts
src/features/eq/: EqBandColumn.tsx  EqPanel.tsx  t02-protocol.ts
src/features/firmware/: FirmwareDialog.tsx
src/features/instrument/: Instrument.tsx
src/features/presets/: PresetPanel.tsx  PresetRow.tsx  audition.ts  builtins.ts  cloud.ts
src/features/stage/: Inspector.tsx  Toolbar.tsx
src/features/switcher/: Switcher.tsx
src/i18n/: index.ts  keys.ts
src/i18n/locales/: en.ts  zh.ts
src/lib/: bridge.ts  store.ts  theme.ts  types.ts
src/lib/api/: auth.ts  client.ts  endpoints.ts  hooks.ts  index.ts  mappers.ts  queryClient.ts  types.ts
